@@ -1,5 +1,10 @@
 2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* e-server.sh: Remove environment variable dependencies in a
+	movable way.
+
+2014-10-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	Remove assertion side effects and document reversions.
 
 	* e-server.sh: Don't use sudo.
